fix: checked status
