# go/model_inline_object_1.go
@@ -1,0 +1,17 @@
+/*
+ * job_offer
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type InlineObject1 struct {
+
+	Message string `json:"message,omitempty"`
+
+	 OccupationMajorClassification `json:",omitempty"`
+}
