# go/model_inline_object_2.go
@@ -1,0 +1,18 @@
+/*
+ * job_offer
+ *
+ * No description provided (generated by Openapi Generator https://github.com/openapitools/openapi-generator)
+ *
+ * API version: 1.0
+ * Generated by: OpenAPI Generator (https://openapi-generator.tech)
+ */
+
+package openapi
+
+type InlineObject2 struct {
+
+	// メッセージ
+	Message string `json:"message,omitempty"`
+
+	Result Nest2TotalPopulation `json:"result ,omitempty"`
+}
